--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,7 +1,8 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
-    %h2= restaurant.name
+    %h2= link_to(restaurant.name, restaurant_path(restaurant))
 - else
   No restaurants yet
 
-%a(href="#") Add a restaurant
+
+= link_to "Add a restaurant", new_restaurant_path
