--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,8 +1,11 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
     %h2= link_to(restaurant.name, restaurant_path(restaurant))
+    = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
+    = link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete
 - else
   No restaurants yet
 
-
+%br
+%br
 = link_to "Add a restaurant", new_restaurant_path
