--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,6 +1,19 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
     %h2= link_to(restaurant.name, restaurant_path(restaurant))
+    %h3 Reviews for
+    %h3=restaurant.name
+
+    - if restaurant
+      %ul
+        - restaurant.reviews.each do |review|
+          %li
+            =  review.thoughts
+            %strong= review.rating
+            \/5
+    - else
+      %p No reviews
+
     = link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)
     = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
     = link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete
