restaurant name length compelte

--- a/app/views/restaurants/new.html.haml
+++ b/app/views/restaurants/new.html.haml
@@ -1,4 +1,13 @@
-= form_for @new_restaurant do |f|
+= form_for @restaurant do |f|
   = f.label :name
   = f.text_field :name
   = f.submit
+
+- if @restaurant.errors.any?
+  %section#errors
+    %h2
+      = pluralize @restaurant.errors.count, "errors"
+      prohibited this restaurant from being saved:
+    %ul
+      - @restaurant.errors.full_messages.each do |message|
+        %li= message
